--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_OPTIONS=--experimental-vm-modules NODE_ENV=test jest --coverage",
     "generate-books": "node scripts/generate-books.js",
     "generate-10k": "node scripts/generate-books.js 10000",
     "create-indexes": "node scripts/createIndexes.js"
@@ -28,6 +28,10 @@
     "mongoose": "^8.3.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@jest/globals": "^29.7.0",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^11.0.1",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.2.2"
   }
 }
